--- a/GSB_Mission_5/app/src/main/res/values/strings.xml
+++ b/GSB_Mission_5/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="mot_de_passe">mot de passe</string>
     <string name="valider">Valider</string>
     <string name="annuler">Annuler</string>
+    <string name="app_deconnexion">Deconnexion</string>
 </resources>
